apps/chipcie-static-scoreboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chipcie-static-scoreboard
  name: chipcie-static-scoreboard
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: chipcie-static-scoreboard
  sessionAffinity: None
  type: ClusterIP
