apps/chipcie-static-scoreboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: chipcie-static-scoreboard
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - scoreboard.chipcie.ch.tudelft.nl
  - scoreboard.nwerc.eu
  rules:
  - backendRefs:
    - name: chipcie-static-scoreboard
      port: 80
